[project]
name = "sonnen_api_v2"
version = "0.5.15"
description = "Sonnen Batterie API V2 package"
authors = [
    {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
]
dependencies = [
    "aiohttp~=3.12",
    "aiohttp-fast-zlib~=0.3",
#    "attrs==25.3.0",
    "isal~=1.7",
#    "propcache==0.3.2",
    "requests~=2.32.4",
    "tzlocal>=5.2",
    "urllib3>=2.0",
    "yarl==1.20.1",
#    "setuptools>=78.1.1",
]
requires-python = ">=3.12.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
