[project]
name = "sonnen_api_v2"
version = "0.5.15"
description = "Sonnen Batterie API V2 package"
authors = [
    {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
]
dependencies = [
    "aiohttp>=3.11.16",
    "aiohttp-fast-zlib>=0.2.3,<4.0.0",
#    "attrs>=23.2.0",
    "isal~=1.7.1",
#    "propcache~=0.2",
    "requests~=2.32.3",
    "tzlocal>=5.2",
#   "urllib3>=1.26.20,<2.0.0",
    "urllib3>=2.0",
    "yarl>=1.18.3",
#    "setuptools>=76.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
